hard-gists/3494203/run.log
=== Docker Run Log for 3494203 ===
Started at: Mi 29. Okt 13:54:00 CET 2025

[2025-10-29 13:54:01] START: Running container for 3494203
[2025-10-29 13:54:01] SUCCESS: Container 428e11e4b74db2e9b19a26eb96b2962608001da43be3a3265d06d64f938ff33c started for 3494203
=== Container logs for 3494203 ===
  File "/snippet.py", line 153
    print 'Key: %s Action: %s pressed' % (key, action)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3494203 ===
[2025-10-29 13:54:03] INFO: Container 428e11e4b74db2e9b19a26eb96b2962608001da43be3a3265d06d64f938ff33c has stopped
